--- a/templates/html.html.twig
+++ b/templates/html.html.twig
@@ -37,8 +37,8 @@
         <meta name="msapplication-config" content="{{ canoncial }}/favicon/browserconfig.xml" />
 
         <link rel="stylesheet" href="css/vendor/normalize.css">
+        <link rel="stylesheet" href="css/vendor/bootstrap/bootstrap.min.css">
         <link rel="stylesheet" href="css/vendor/main.css">
-        <link rel="stylesheet" href="css/theme.css">
 
         <meta name="theme-color" content="#002752">
 
@@ -55,7 +55,10 @@
             <i class="fas fa-tools"></i> Handcrafted from Rudra Martin Grellmann with <i class="fas fa-heart"></i>
     {% endblock %}
     {% block html_body_js_bottom %}
-       <script src="js/vendor/modernizr-3.11.2.min.js"></script>
+        <script src="js/vendor/jquery/jquery-3.5.1.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+        <script src="js/vendor/modernizr-3.11.2.min.js"></script>
+        <script src="js/vendor/bootstrap/bootstrap.min.js"></script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
 
