--- a/templates/html.html.twig
+++ b/templates/html.html.twig
@@ -40,20 +40,58 @@
         <link rel="stylesheet" href="css/vendor/bootstrap/bootstrap.min.css">
         <link rel="stylesheet" href="css/vendor/fontawesome/css/all.min.css">
         <link rel="stylesheet" href="css/vendor/main.css">
+        <link rel="stylesheet" href="css/theme.css">
 
         <meta name="theme-color" content="#002752">
 
 </head>
 <body>
     {% block header %}
-            
-    {% endblock %}
-    {% block teaser %}
+            <nav class="container-fluid navbar navbar-expand-lg navbar-light bg-light">
+                    <a class="navbar-brand" href="#">MVC App</a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                    </button>
 
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                            <ul class="navbar-nav mr-auto">
+                                    <li class="nav-item active">
+                                            <a class="nav-link" href="/">Homepage <span class="sr-only">(current)</span></a>
+                                    </li>
+                                    <li class="nav-item">
+                                            <a class="nav-link" href="/aufgabe_a">Aufgabe 1</a>
+                                    </li>
+                                    <li class="nav-item dropdown">
+                                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Aufgabe 2</a>
+                                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                                <a class="dropdown-item" href="/aufgabe_b">Teil A</a>
+                                                <a class="dropdown-item" href="/aufgabe_c">Teil B</a>
+                                            </div>
+                                    </li>
+                                    <li class="nav-item">
+                                            <a class="nav-link" href="/login" tabindex="-1" aria-disabled="true">Login</a>
+                                    </li>
+                                    <li class="nav-item">
+                                            <a class="nav-link" href="/account" tabindex="-1" aria-disabled="true">Registrieren</a>
+                                    </li>
+                            </ul>
+                            <form class="form-inline my-2 my-lg-0">
+                                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                            </form>
+                    </div>
+            </nav>
     {% endblock %}
+    {% block teaser %}{% endblock %}
     {% block content %}{% endblock %}
     {% block footer %}
-            <i class="fas fa-tools"></i> Handcrafted from Rudra Martin Grellmann with <i class="fas fa-heart"></i>
+            <footer class="container">
+                    <div class="row">
+                            <div class="col">
+                                    <p class="text-center"><i class="fas fa-tools"></i> Handcrafted from Rudra Martin Grellmann with <i class="fas fa-heart"></i></p>
+                            </div>
+                    </div>
+            </footer>
     {% endblock %}
     {% block html_body_js_bottom %}
         <script src="js/vendor/jquery/jquery-3.5.1.min.js"></script>
