--- a/templates/task.html.twig
+++ b/templates/task.html.twig
@@ -1,17 +1,36 @@
 {% extends "html.html.twig" %}
+{% block teaser %}
+    <section id="teaser" class="container-fluid">
+        <div class="carousel slide" data-ride="carousel">
+            <figure class="carousel-inner">
+                <img src=" {{ teaser.md }}" srcset=" {{ teaser.dt }} 2x,  {{ teaser.lg }} 3x" class="img-fluid" alt="{{ title }}">
+            </figure>
+        </div>
+    </section>
+{% endblock %}
 {% block content %}
-    <header>
-        <h1>{{ title }}</h1>
-    </header>
-    <main>
-        <article>
-            <p>
-                Welcome on my awesome homepage (index).
-            </p>
-        </article>
-    </main>
-    <aside>
-        <h2>{{ title }}</h2>
-        <p>more</p>
-    </aside>
+    <div class="container">
+        <header class="row">
+            <h1>{{ title }}</h1>
+        </header>
+        <div class="row">
+            <main class="col-lg-9">
+                <article>
+                    <header>
+                        <h2>Title of that Tasks</h2>
+                    </header>
+                    <p>
+                        The Results
+                    </p>
+                    <footer>
+                        <p>Downlaodible Result</p>
+                    </footer>
+                </article>
+            </main>
+            <aside class="col-lg-3">
+                <h4>List of something</h4>
+                <p></p>
+            </aside>
+        </div>
+    </div>
 {% endblock %}
