Cleanup Index Controller, account Model

--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -39,9 +39,8 @@
                     <h2></h2>
                 </header>
                 <p class="important">
-                    Welcome on my awesome registerpage (index).
+                    Welcome on my awesome Homepage (index).
                 </p>
-                <p>{{ query.bezeichner }}</p>
             </section>
         </main>
     </div>
