--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -1,5 +1,6 @@
 {% extends "html.html.twig" %}
 {% block teaser %}
+    <!--suppress SpellCheckingInspection -->
     <section id="teaser" class="container-fluid">
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
@@ -39,7 +40,8 @@
                     <h2></h2>
                 </header>
                 <p class="important">
-                    Welcome on my awesome Homepage (index).
+                    Wilkommen. wie geht's Dir?
+                    Hier ist eine supercoole Homepage auf einem fabelhaften MVC Framework.
                 </p>
             </section>
         </main>
