--- a/templates/html.html.twig
+++ b/templates/html.html.twig
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!--suppress SpellCheckingInspection, HtmlUnknownTarget -->
 <html class="no-js" lang="De">
 <head>
         <meta charset="utf-8">
@@ -81,8 +82,8 @@
     {% block footer %}
             <footer class="container">
                     <div class="row">
-                            <div class="col">
-                                    <p class="text-center"><i class="fas fa-tools"></i> Handcrafted from Rudra Martin Grellmann with <i class="fas fa-heart"></i></p>
+                            <div class="col mt-5 mb-2">
+                                    <p class="text-center"><i class="fas fa-tools"></i> Call Rudra. Handcrafted from Rudra Martin Grellmann {martin@grellmann.eu} with <i class="fas fa-heart"></i></p>
                             </div>
                     </div>
             </footer>
