--- a/templates/task.html.twig
+++ b/templates/task.html.twig
@@ -26,18 +26,49 @@
                             <h2>{{ row.title }}</h2>
                         </header>
                         <div class="card-body">
-                            <blockquote>
-                                <p>{{ row.description}}</p>
-                            </blockquote>
+                            <p>{{ row.description}}</p>
+                            <h3>SQL Statements</h3>
                             <code>
                                 {{ row.result }}
                             </code>
+                            {# integrate Results from SQL-Statement, if exist #}
+                            {% if row.example is not null %}
+                                <h4 class="pt-3">Die Ergebnisse vom SQL-Statement</h4>
+                                <div class="table-responsive">
+                                    {% set example = row.example %}
+                                    <table class="table table-hover">
+                                        {# get the first item from the array #}
+                                        {% set table_header = example|first %}
+                                        <thead>
+                                        <tr>
+                                            {# loop the keys, get the name of the key of the array and print it #}
+                                            {% for property_title in table_header|keys %}
+                                                <th scope="col">{{ property_title }}</th>
+                                            {% endfor %}
+                                        </tr>
+                                        </thead>
+                                        <tbody>
+                                        {# loop the array again #}
+                                        {% for item in example %}
+                                            <tr>
+                                                {# get the value of the array and print it #}
+                                                {% for field in table_header|keys %}
+                                                    <td>{{ attribute(item, field) }}</td>
+                                                {% endfor %}
+                                            </tr>
+                                        {% endfor %}
+                                        </tbody>
+                                    </table>
+                                </div>
+                            {% endif %}
+                            {# integrate link, if exist #}
                             {% if row.link %}
                                 <p><a href="{{ row.link }}" class="" title="{{ row.description }}">{{ row.linktext }}</a></p>
                             {% endif %}
+                            {# integrate image, if exist #}
                             {% if row.img1x or row.img2x or row.img3x %}
                                 <figure class="mx-5">
-                                    <img class="img-fluid" src="{{ row.img1x }}" srcset="{{ row.img2x }} 2x, {{ row.img3x }} 3x" title="{{ row.title }}" />
+                                    <img class="img-fluid" src="{{ row.img1x }}" srcset="{{ row.img2x }} 2x, {{ row.img3x }} 3x" alt="{{ row.title }}" />
                                     <figcaption>{{ row.title }} (Aufgabe {{ row.id }})</figcaption>
                                 </figure>
                             {% endif %}
