--- a/templates/html.html.twig
+++ b/templates/html.html.twig
@@ -49,7 +49,7 @@
 <body>
     {% block header %}
             <nav class="container-fluid navbar navbar-expand-lg navbar-light bg-light">
-                    <a class="navbar-brand" href="#">MVC App</a>
+                    <a class="navbar-brand" href="{{ canoncial }}">MVC App</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                     </button>
